# shcde-stats-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
instructions/: gui.md
skills/: rust.md
src/: config.rs  main.rs  obfuscation.rs
src/engine/: addresses.rs  building.rs  enums.rs  game.rs  memory.rs  mod.rs  player.rs  process.rs  service.rs  snapshot.rs  unit.rs
src/ui/: bridge.rs
ui/: app.slint
