[package]
name = "shcde-stats-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "shcde-monitor"
path = "src/main.rs"

[features]
default = ["read-only"]
read-only = []
debug-tools = []
memory-writes = ["debug-tools"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
slint = "1.15"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

[build-dependencies]
ico = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
slint-build = "1.15"
winresource = "0.1"
